redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app.kubernetes.io/name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis
    spec:
      containers:
        - args:
              - redis-server
              - --save
              - "20"
              - "1"
              - --loglevel
              - warning
              - --requirepass
              - Z2Zsa2pnbGZk
          name: redis
          image: redis:7.2-rc-alpine
          ports:
            - containerPort: 6379
              name: redis
