ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evgendas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /employee-assessment
            pathType: Prefix
            backend:
              service:
                name: employee-assessment
                port:
                  number: 80
